# file_srv_core

./: .gitignore
src/: CMakeLists.txt  asc_reader.cpp  asc_reader.h  can_analyzer_log.h  can_analyzer_trace.h  can_decoder.cpp  can_decoder.h  can_log_decoder.cpp  can_log_decoder.h  can_parser.cpp  can_parser.h  file_path_utils.h  meta_data_tracker.cpp  meta_data_tracker.h  metadata_storage.cpp  metadata_storage_if.h  parsed_entry_layout.cpp  parsed_entry_layout.h  parsed_mmap.cpp  parsed_mmap_if.h  parsed_mmap_pybind.cpp  prs_token.h  storage_token.h  view_browser.cpp  view_browser.h
src/mmap/: can_log_decoder_DEPRECATED.cpp  data_mmap_handler.py  decoded_mmap_if.cpp  decoded_mmap_if.h  index_mmap_layout.h  mmap_canid_idx.cpp  mmap_canid_idx.h  mmap_chnl_idx.cpp  mmap_chnl_idx.h  mmap_data.cpp  mmap_data.h  mmap_decoder_rawvalue.cpp  mmap_decoder_rawvalue.h  mmap_decoder_row_index.cpp  mmap_decoder_row_index.h  mmap_decoder_row_index_changed.cpp  mmap_decoder_row_index_changed.h  mmap_decoder_value.cpp  mmap_decoder_value.h  mmap_dir_idx.cpp  mmap_dir_idx.h  mmap_error_codes.h  mmap_header_constract.cpp  mmap_header_constract.h  mmap_layout_view.cpp  mmap_layout_view.h  mmap_wrapper.cpp  mmap_wrapper.h  mmap_wrapper_RAII.h  parsed_mmap.cpp  parsed_mmap_if.h
src/mmap/depre/: can_log_decoder_DEPRECATED.cpp
src/module/: __init__.py  fs_core.pyi  parsed_mmap.pyi
src/pybind/: can_parser_pybind.cpp  can_parser_pybind.h  parsed_mmap_pybind.cpp
src/sqlite/: can_log_decoder.cpp  log_index_db.cpp  log_index_db.h  sql_decode.cpp  sql_decode_if.h  sqlite_wrapper.cpp  sqlite_wrapper.h  sqlite_wrapper_RAII.h
src/tests/: entires_mock_test.cpp  out_segments_path_test.cpp  test_asc_reader.cpp  test_decode_function.cpp  test_log_index_db.cpp  test_mmap_data.cpp  test_pybind_metadata_api.py  test_run_worker_segmented.cpp  test_view_browser.cpp
